<resources>
    <string name="app_name">RandomDataApp</string>

    <!-- Common -->
    <string name="common_try_again">Try again</string>

    <!-- Home -->
    <string name="home_screen_title">Home</string>

    <!-- Details -->
    <string name="details_screen_title">Details</string>

    <string name="full_name_label">Full Name: %s</string>
    <string name="full_email_label">E-mail: %s</string>
    <string name="full_phone_number_label">Phone Number: %s</string>
    <string name="full_date_of_birth_label">Data of Birth: %s</string>
    <string name="full_employment_title_label">Employment Title: %s</string>
    <string name="full_employment_key_skill_label">Key Skill: %s</string>

    <!-- Errors -->
    <string name="error_loading_data">Error when trying to load data</string>
    <string name="error_loading_image">Error loading image</string>
    <string name="error_loading_user_name">Error loading user name</string>
    <string name="error_loading_phone_number">Error loading phone number</string>
    <string name="error_loading_address_email">Error loading address email</string>

    <!-- Tools -->
    <string name="tools_user_name">User name</string>
    <string name="tools_phone_number">+55 31 99999–9999</string>
    <string name="tools_address_email">exemplo@gmail.com</string>
    <string name="tools_card_number">4469–4146–7687-5924</string>
    <string name="tools_card_status">Active</string>
    <string name="tools_card_plan">Standard</string>
    <string name="tools_card_payment_method">WeChat Pay</string>
    <string name="tools_card_term">Payment in advance</string>
    <string name="tools_register_data">cherrie.murphy</string>
</resources>