<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_item_home"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_140dp"
    android:layout_margin="@dimen/_8dp"
    app:cardCornerRadius="@dimen/_8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_item_home"
            android:layout_width="@dimen/_140dp"
            android:layout_height="@dimen/match_constraints"
            android:importantForAccessibility="no"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:id="@+id/text_user_name"
            android:layout_width="@dimen/match_constraints"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_item_home"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/tools_user_name" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:id="@+id/text_phone_number"
            android:layout_width="@dimen/match_constraints"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_item_home"
            app:layout_constraintTop_toBottomOf="@+id/text_user_name"
            tools:text="@string/tools_phone_number" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:id="@+id/text_address_email"
            android:layout_width="@dimen/match_constraints"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_item_home"
            app:layout_constraintTop_toBottomOf="@+id/text_phone_number"
            tools:text="@string/tools_address_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>